test: upload releases.json file

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,3 +32,10 @@ jobs:
         name: Check file
         run: |
           jq . releases.json
+      -
+        name: Upload releases.json
+        uses: actions/upload-artifact@v3
+        with:
+          name: releases-json
+          path: releases.json
+          if-no-files-found: error
