--- a/.github/workflows/releases-json.yml
+++ b/.github/workflows/releases-json.yml
@@ -28,7 +28,7 @@ jobs:
           retries: 3
           script: |
             let res = {};
-            const [owner, repo] = 'docker/buildx'.split('/');
+            const [owner, repo] = '${{ inputs.repository }}'.split('/');
             core.info(`Fetching releases for ${owner}/${repo}`);
 
             const latestRelease = await github.rest.repos.getLatestRelease({
