--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,28 +14,22 @@ jobs:
     uses: ./.github/workflows/releases-json.yml
     with:
       repository: docker/buildx
+      artifact_name: buildx-releases-json
+      filename: buildx-releases.json
     secrets: inherit
 
-  releases-json-file:
+  releases-json-check:
     runs-on: ubuntu-latest
     needs:
       - releases-json
     steps:
       -
-        name: Create releases.json file
-        uses: actions/github-script@v6
+        name: Download
+        uses: actions/download-artifact@v3
         with:
-          script: |
-            const fs = require('fs');
-            await fs.writeFileSync('releases.json', `${{ needs.releases-json.outputs.releases }}`);
+          name: buildx-releases-json
+          path: .
       -
         name: Check file
         run: |
-          jq . releases.json
-      -
-        name: Upload releases.json
-        uses: actions/upload-artifact@v3
-        with:
-          name: releases-json
-          path: releases.json
-          if-no-files-found: error
+          jq . buildx-releases.json
