--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,3 +47,24 @@ jobs:
         uses: ./.github/actions/install-k3s
         with:
           version: v1.21.2-k3s1
+
+  list-commits:
+    uses: ./.github/workflows/list-commits.yml
+    with:
+      limit: 5
+    secrets: inherit
+
+  list-commits-check:
+    runs-on: ubuntu-latest
+    needs:
+      - list-commits
+    strategy:
+      fail-fast: false
+      matrix:
+        commit: ${{ fromJson(needs.list-commits.outputs.matrix) }}
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ matrix.commit }}
