--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,3 +68,21 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ matrix.commit }}
+
+  container-logs-check:
+    runs-on: ubuntu-20.04
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Run container
+        run: |
+          docker run -d --name test crazymax/samba:latest
+      -
+        name: Check container logs
+        uses: ./.github/actions/container-logs-check
+        with:
+          container_name: test
+          log_check: " started."
+          timeout: 20
