--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -140,3 +140,33 @@ jobs:
             echo "::error::Should have failed"
             exit 1
           fi
+
+  docker-scout:
+    runs-on: ubuntu-20.04
+    if: ${{ github.event_name != 'pull_request' }}
+    strategy:
+      fail-fast: false
+      matrix:
+        format:
+          - packages
+          - sarif
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v4
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Scout
+        id: scout
+        uses: ./.github/actions/docker-scout
+        with:
+          image: registry://moby/buildkit:master
+          format: ${{ matrix.format }}
+      -
+        name: Print result
+        run: cat ${{ steps.scout.outputs.result }}
