--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -172,3 +172,9 @@ jobs:
         run: |
           set -x
           cat ${{ steps.scout.outputs.result-file }}
+      -
+        name: Upload SARIF report
+        if: ${{ matrix.format == 'sarif' }}
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: ${{ steps.scout.outputs.result-file }}
