--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,30 @@ jobs:
         run: |
           jq . buildx-releases.json
 
+  releases-json-edge:
+    uses: ./.github/workflows/releases-json.yml
+    with:
+      repository: crazy-max/releases-json-test
+      artifact_name: test-edge-releases-json
+      filename: test-edge-releases.json
+    secrets: inherit
+
+  releases-json-edge-check:
+    runs-on: ubuntu-latest
+    needs:
+      - releases-json-edge
+    steps:
+      -
+        name: Download
+        uses: actions/download-artifact@v4
+        with:
+          name: test-edge-releases-json
+          path: .
+      -
+        name: Check file
+        run: |
+          jq . test-edge-releases.json
+
   install-k3s:
     runs-on: ubuntu-20.04
     steps:
