--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -102,7 +102,7 @@ jobs:
         name: Install k3s
         uses: ./.github/actions/install-k3s
         with:
-          version: v1.21.2-k3s1
+          version: v1.24.4+k3s1
 
   list-commits:
     uses: ./.github/workflows/list-commits.yml
