--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -94,9 +94,6 @@ jobs:
           - ubuntu-20.04
           - ubuntu-22.04
           - ubuntu-24.04
-        version:
-          - ''
-          - v1.24.4+k3s2
     steps:
       -
         name: Checkout
@@ -105,7 +102,7 @@ jobs:
         name: Install k3s
         uses: ./.github/actions/install-k3s
         with:
-          version: ${{ matrix.version }}
+          version: v1.24.4+k3s1
 
   list-commits:
     uses: ./.github/workflows/list-commits.yml
