--- a/.github/actions/install-k3s/action.yml
+++ b/.github/actions/install-k3s/action.yml
@@ -17,7 +17,7 @@ runs:
         mkdir -p "${KUBECONFIG}"
         echo "KUBECONFIG=${KUBECONFIG}" >> $GITHUB_ENV
         set -x
-        curl -sfL https://get.k3s.io | sh -s - --disable traefik --disable servicelb --write-kubeconfig-mode 666 --write-kubeconfig ${KUBECONFIG}
+        curl -sfL https://get.k3s.io | sh -s - --docker --disable traefik --disable servicelb --write-kubeconfig-mode 666 --write-kubeconfig ${KUBECONFIG}
         sudo k3s kubectl get node
       env:
         INSTALL_K3S_VERSION: ${{ inputs.version }}
