--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -242,6 +242,28 @@ jobs:
         with:
           sarif_file: ${{ steps.scout.outputs.result-file }}
 
+  build-distribute-mp:
+    uses: ./.github/workflows/build-distribute-mp.yml
+    permissions:
+      # same as global permissions
+      contents: read
+      # required to push to GHCR
+      packages: write
+    with:
+      build-context: https://github.com/docker/buildx.git#v0.21.2
+      build-args: |
+        BUILDKIT_CONTEXT_KEEP_GIT_DIR=1
+      build-platforms: linux/amd64,linux/arm64
+      push: ${{ github.event_name != 'pull_request' }}
+      cache: true
+      cache-scope: build-buildx-bin
+      summary: false
+      meta-image: ghcr.io/crazy-max/test-build-distribute-mp
+      login-registry: ghcr.io
+      login-username: ${{ github.actor }}
+    secrets:
+      login-password: ${{ secrets.GITHUB_TOKEN }}
+
   bake-distribute-mp:
     uses: ./.github/workflows/bake-distribute-mp.yml
     permissions:
@@ -254,7 +276,7 @@ jobs:
       target: image-cross
       push: ${{ github.event_name != 'pull_request' }}
       cache: true
-      cache-scope: buildx-bin
+      cache-scope: bake-buildx-bin
       summary: false
       meta-image: ghcr.io/crazy-max/test-bake-distribute-mp
       meta-bake-target: meta-helper
