--- a/.github/workflows/zizmor.yml
+++ b/.github/workflows/zizmor.yml
@@ -58,6 +58,12 @@ jobs:
         with:
           enable-cache: false
       -
+        name: Install zizmor
+        uses: actions/github-script@v7
+        with:
+          script: |
+            await exec.exec('uv', ['tool', 'install', 'zizmor']);
+      -
         name: Run zizmor
         if: ${{ env.HAS_WORKFLOWS }}
         uses: actions/github-script@v7
@@ -71,13 +77,7 @@ jobs:
             const os = require('os');
             const path = require('path');
 
-            const uvxArgs = ['zizmor'];
-            if (process.env.ADVANCED_SECURITY_ENABLED) {
-              uvxArgs.push('--format', 'sarif');
-            }
-            uvxArgs.push(...core.getInput('args').split(' '), '.');
-
-            const res = await exec.getExecOutput('uvx', uvxArgs, {
+            const res = await exec.getExecOutput('zizmor', ['--format', 'sarif', ...core.getInput('args').split(' '), '.'], {
               ignoreReturnCode: true
             });
             if (res.stderr.length > 0 && res.exitCode != 0) {
@@ -86,7 +86,7 @@ jobs:
 
             if (process.env.ADVANCED_SECURITY_ENABLED) {
               const resultFile = path.join(fs.mkdtempSync(path.join(`${{ runner.temp }}` || os.tmpdir(), 'zizmor-')), 'results.sarif');
-              core.info(`Storing results in ${resultFile}`);
+              core.info(`Storing SARIF report in ${resultFile}`);
               await fs.writeFileSync(resultFile, res.stdout);
               core.setOutput('result-file', resultFile);
             }
