--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -253,11 +253,14 @@ jobs:
       build-context: https://github.com/docker/buildx.git#v0.21.2
       build-args: |
         BUILDKIT_CONTEXT_KEEP_GIT_DIR=1
+        GO_VERSION
       build-platforms: linux/amd64,linux/arm64
       push: ${{ github.event_name != 'pull_request' }}
       cache: true
       cache-scope: build-buildx-bin
       summary: false
+      envs: |
+        GO_VERSION=1.23.8
       meta-image: ghcr.io/crazy-max/test-build-distribute-mp
       login-registry: ghcr.io
       login-username: ${{ github.actor }}
@@ -278,6 +281,8 @@ jobs:
       cache: true
       cache-scope: bake-buildx-bin
       summary: false
+      envs: |
+        GO_VERSION=1.23.8
       meta-image: ghcr.io/crazy-max/test-bake-distribute-mp
       meta-bake-target: meta-helper
       login-registry: ghcr.io
